fixed whitespace under footer on mobile

--- a/src/pages/Payments/Payments.scss
+++ b/src/pages/Payments/Payments.scss
@@ -210,7 +210,7 @@
 //        margin-top:118px;
 //    }
     .main-container .footer-container {
-        position: absolute;
+        position: fixed;
         bottom:0;
     }
 }
@@ -402,7 +402,7 @@
 //        margin-top:118px;
 //    }
     .main-container .footer-container {
-        position: absolute;
+        position: fixed;
         bottom:0;
     }
 }
@@ -593,7 +593,7 @@
    }
 
    .main-container .footer-container{
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
    
